session types in PL

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -161,3 +161,183 @@
   pages     = {},
   title     = {Session Types in Haskell Updating Message Passing for the 21st Century}
 }
+
+@inproceedings{JML15,
+  author    = {Thomas Bracht Laumann Jespersen and
+               Philip Munksgaard and
+               Ken Friis Larsen},
+  title     = {Session types for {Rust}},
+  booktitle = {Proc.\ of WGP@ICFP},
+  optpages     = {13--22},
+  year      = {2015},
+  optpublisher = {{ACM}},
+  opturl       = {http://doi.acm.org/10.1145/2808098.2808100},
+  doi       = {10.1145/2808098.2808100},
+  timestamp = {Tue, 15 Dec 2015 18:36:34 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icfp/JespersenML15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{PadFuse,
+  title={A simple library implementation of binary sessions},
+  volume={27},
+  DOI={10.1017/S0956796816000289},
+  journal={Journal of Functional Programming},
+  publisher={Cambridge University Press},
+  author={Padovani, Luca},
+  year={2017},
+  note={Website: \url{http://www.di.unito.it/~padovani/Software/FuSe/FuSe.html}}
+  }
+
+@inproceedings{HY16,
+  author    = {Raymond Hu and
+               Nobuko Yoshida},
+  title     = {Hybrid Session Verification Through Endpoint {API} Generation},
+  booktitle = {Proc.\ of FASE},
+  optpages     = {401--418},
+  optseries    = {LNCS},
+  optvolume    = {9633},
+  optpublisher = {Springer},
+  year      = {2016},
+  opturl       = {http://dx.doi.org/10.1007/978-3-662-49665-7_24},
+  doi       = {10.1007/978-3-662-49665-7_24},
+  timestamp = {Tue, 22 Mar 2016 15:57:02 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/fase/HuY16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{ScalasY16,
+  author    = {Alceste Scalas and
+               Nobuko Yoshida},
+  title     = {Lightweight Session Programming in Scala},
+  booktitle = {ECOOP},
+  optpages     = {21:1--21:28},
+  year      = {2016},
+  optseries    = {LIPIcs},
+  optvolume    = {56},
+  optpublisher = {Schloss Dagstuhl - Leibniz-Zentrum fuer Informatik},
+  opturl       = {http://dx.doi.org/10.4230/LIPIcs.ECOOP.2016.21},
+  doi       = {10.4230/LIPIcs.ECOOP.2016.21},
+  timestamp = {Wed, 20 Jul 2016 15:20:05 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ecoop/ScalasY16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{Scalas2017,
+  author    = {Alceste Scalas and
+               Ornela Dardha and
+               Raymond Hu and
+               Nobuko Yoshida},
+  title     = {A Linear Decomposition of Multiparty Sessions for Safe Distributed
+               Programming},
+  booktitle = {Proc.\ of {ECOOP}},
+  series    = {LIPIcs},
+  volume    = {74},
+  pages     = {24:1--24:31},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year      = {2017},
+  doi       = {10.4230/LIPIcs.ECOOP.2017.24},
+  timestamp = {Fri, 27 Mar 2020 08:51:54 +0100},
+  biburl    = {https://dblp.org/rec/conf/ecoop/ScalasDHY17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{SivaramakrishnanNZE10,
+	Author = {K. C. Sivaramakrishnan and Karthik Nagaraj and Lukasz Ziarek and Patrick Eugster},
+	Booktitle = {Proc.\ of {COORDINATION}},
+	optPages = {152-167},
+	optSeries = {LNCS},
+	Title = {Efficient Session Type Guided Distributed Interaction},
+	Volume = {6116},
+	Year = {2010},
+        doi = {10.1007/978-3-642-13414-2_11}
+}
+
+@article{Brand1983CFM,
+ author = {Brand, Daniel and Zafiropulo, Pitro},
+ title = {On Communicating Finite-State Machines},
+ journal = {J. ACM},
+ optissue_date = {April 1983},
+ volume = {30},
+ number = {2},
+ month = apr,
+ year = {1983},
+ ssn = {0004-5411},
+pages = {323--342},
+ optnumpages = {20},
+ opturl = {http://doi.acm.org/10.1145/322374.322380},
+ doi = {10.1145/322374.322380},
+ optacmid = {322380},
+ publisher = {ACM},
+ optaddress = {New York, NY, USA},
+} 
+
+@article{DHHNY2015,
+  author = "Romain Demangeon and Kohei Honda and Raymond Hu and Rumyana Neykova and Nobuko Yoshida",
+  title = {Practical Interruptible Conversations: Distributed Dynamic Verification with Multiparty Session Types and {Python}},
+  journal = "Formal Methods in System Design",
+  optpublisher = "Springer",
+  optpages = "1--29",
+  year = "2015",
+  doi = "10.1007/s10703-014-0218-8"
+}
+
+@inproceedings{Fowler16,
+  author    = {Simon Fowler},
+  title     = {An {E}rlang Implementation of Multiparty Session Actors},
+  booktitle = {{ICE}},
+  optpages     = {36--50},
+  year      = {2016},
+  optseries    = {{EPTCS}},
+  optvolume    = {223},
+  opturl       = {http://dx.doi.org/10.4204/EPTCS.223.3},
+  doi       = {10.4204/EPTCS.223.3},
+  timestamp = {Tue, 04 Oct 2016 13:08:15 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/Fowler16},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{NY2017A,
+  TITLE = {{Multiparty Session Actors}},
+  AUTHOR = {Neykova, Rumyana and Yoshida, Nobuko},
+  optURL = {http://lmcs.episciences.org/3227},
+  DOI = {10.23638/LMCS-13(1:17)2017},
+  JOURNAL = {{Logical Methods in Computer Science}},
+  VOLUME = 13,
+  NUMBER = 1,
+  YEAR = {2017},
+  MONTH = Mar,
+}
+
+@inproceedings{NY2017,
+  author = {Rumyana Neykova and Nobuko Yoshida},
+  title = {{Let It Recover: Multiparty Protocol-Induced Recovery}},
+  booktitle = {CC},
+  optpublisher = {ACM},
+  year = 2017,
+  doi = "10.1145/3033019.3033031"
+}
+
+@Article{NBY2017,
+author="Neykova, Rumyana
+and Bocchi, Laura
+and Yoshida, Nobuko",
+title="Timed Runtime Monitoring for Multiparty Conversations",
+journal="Formal Aspects of Computing",
+year="2017",
+optpages="1--34",
+optissn="1433-299X",
+doi="10.1007/s00165-017-0420-8",
+opturl="http://dx.doi.org/10.1007/s00165-017-0420-8"
+}
+
+@inproceedings{LMMNSVY2015,
+  author = "Hugo A. Lopez and Eduardo R. B. Marques and Francisco Martins and Nicholas Ng and Casar Santos and Vasco Thudichum Vasconcelos and Nobuko Yoshida",
+  title = "Protocol-Based Verification of Message-Passing Parallel Programs",
+  booktitle = "OOPSLA",
+  optpublisher = "ACM",
+  optpages = {280-298},
+  year = "2015",
+  doi = "10.1145/2814270.2814302"
+}
+
