related work on DF

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -341,3 +341,174 @@ opturl="http://dx.doi.org/10.1007/s00165-017-0420-8"
   doi = "10.1145/2814270.2814302"
 }
 
+@inproceedings{KDPG16,
+  author    = {Dimitrios Kouzapas and
+               Ornela Dardha and
+               Roly Perera and
+               Simon J. Gay},
+  title     = {Typechecking protocols with {Mungo} and {StMungo}},
+  booktitle = {PPDP},
+  pages     = {146--159},
+  year      = {2016},
+}
+
+@inproceedings{CP10,
+  author    = {Lu\'{\i}s Caires and
+               Frank Pfenning},
+  title     = {Session Types as Intuitionistic Linear Propositions},
+  booktitle = {CONCUR},
+  series    = {LNCS},
+  volume    = {6269},
+  publisher = {Springer},
+  year      = {2010},
+  pages     = {222-236},
+  opturl       = {http://dx.doi.org/10.1007/978-3-642-15375-4_16},
+  doi       = {10.1007/978-3-642-15375-4_16},
+  timestamp = {Thu, 26 Aug 2010 16:46:17 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/concur/CairesP10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{girard87,
+  author       = {Girard, Jean-Yves},
+  year         = 1987,
+  journal      = {Theoretical Computer Science},
+  pages        = {1--102},
+  title        = {Linear Logic},
+  volume       = 50,
+}
+
+@inproceedings{wadler12,
+  author       = {Wadler, Philip},
+  booktitle    = {Proc.\ of {ICFP}},
+  year         = 2012,
+  pages        = {273--286},
+  title        = {Propositions as sessions},
+}
+@article{wadler14,
+  author       = {Philip Wadler},
+  year         = {2014},
+  month        = jan,
+  publisher    = {Cambridge University Press ({CUP})},
+  volume       = {24},
+  number       = {2-3},
+  pages        = {384--418},
+  title        = {Propositions as sessions},
+  journal      = {Journal of Functional Programming},
+  note         = {Extended version of \cite{wadler12}}
+}
+
+@inproceedings{dardhagay18,
+  author       = {Dardha, Ornela and Gay, Simon J.},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {FoSSaCS}},
+  year         = 2018,
+  pages        = {91--109},
+  series       = {LNCS},
+  title        = {A New Linear Logic for Deadlock-Free Session-Typed Processes},
+  volume       = 10803,
+}
+
+@inproceedings{kobayashi06,
+  author       = {Kobayashi, Naoki},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {CONCUR}},
+  year         = 2006,
+  pages        = {233--247},
+  series       = {LNCS},
+  title        = {A New Type System for Deadlock-Free Processes},
+  volume       = 4137,
+}
+
+@inproceedings{padovani14,
+  author       = {Padovani, Luca},
+  publisher    = {ACM},
+  booktitle    = {Proc.\ of {CSL-LICS}},
+  year         = 2014,
+  pages        = {72:1--72:10},
+  title        = {{Deadlock and Lock Freedom in the Linear $\pi$-Calculus}},
+}
+
+@inproceedings{balzertoninho19,
+  author       = {Balzer, Stephanie and Toninho, Bernardo and Pfenning, Frank},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {ESOP}},
+  year         = 2019,
+  pages        = {611--639},
+  series       = {Lecture Notes in Computer Science},
+  title        = {Manifest Deadlock-Freedom for Shared Session Types},
+  volume       = 11423,
+}
+
+@inproceedings{lindleymorris15,
+  author       = {Lindley, Sam and Morris, J. Garrett},
+  booktitle    = {Proc.\ of {ESOP}},
+  year         = 2015,
+  pages        = {560--584},
+  title        = {A Semantics for Propositions as Sessions},
+}
+
+@article{wadler15,
+  author       = {Wadler, Philip},
+  year         = 2015,
+  journal      = {Communications of the {ACM}},
+  number       = 12,
+  pages        = {75--84},
+  title        = {Propositions as types},
+  volume       = 58,
+}
+
+@inproceedings{dezani-ciancaglinimostrous06,
+  author       = {Dezani-Ciancaglini, Mariangiola and Mostrous, Dimitris and Yoshida, Nobuko and Drossopoulou, Sophia},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {ECOOP}},
+  year         = 2006,
+  pages        = {328--352},
+  series       = {LNCS},
+  title        = {Session Types for Object-Oriented Languages},
+  volume       = 4067,
+}
+
+@inproceedings{dezani-ciancagliniliguoro09progress,
+  author       = {Dezani-Ciancaglini, Mariangiola and de'Liguoro, Ugo and Yoshida, Nobuko},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {TGC}},
+  year         = 2009,
+  pages        = {257--275},
+  series       = {LNCS},
+  title        = {On Progress for Structured Communications},
+  volume       = 4912,
+}
+
+@inproceedings{hondayoshida08,
+  author       = {Honda, Kohei and Yoshida, Nobuko and Carbone, Marco},
+  publisher    = {ACM},
+  booktitle    = {Proc.\ of {POPL}},
+  year         = 2008,
+  pages        = {273--284},
+  title        = {Multiparty asynchronous session types},
+  volume       = {43(1)},
+}
+
+@article{gayvasconcelos10,
+  author       = {Gay, Simon J. and Vasconcelos, Vasco T.},
+  year         = 2010,
+  journal      = {Journal of Functional Programming},
+  number       = 1,
+  pages        = {19--50},
+  title        = {Linear type theory for asynchronous session types},
+  volume       = 20,
+}
+
+@article{gayvasconcelos12,
+  author       = {Gay, Simon J. and Vasconcelos, Vasco T.},
+  title        = {Linear type theory for asynchronous session types},
+  journal      = {JFP},
+  publisher    = {Cambridge University Press ({CUP})},
+  year         = 2012,
+  volume       = 20,
+  number       = 1,
+  pages        = {19--50},
+  note         = {Extended version of \cite{gayvasconcelos10}},
+}
+
