a pass on priority sesh

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -409,6 +409,21 @@ opturl="http://dx.doi.org/10.1007/s00165-017-0420-8"
   volume       = 10803,
 }
 
+@article{KPT99,
+  author    = {Naoki Kobayashi and
+               Benjamin C. Pierce and
+               David N. Turner},
+  title     = {Linearity and the pi-calculus},
+  journal   = {{ACM} Trans. Program. Lang. Syst.},
+  volume    = {21},
+  number    = {5},
+  pages     = {914--947},
+  year      = {1999},
+  doi       = {10.1145/330249.330251},
+  biburl    = {https://dblp.org/rec/journals/toplas/KobayashiPT99.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{kobayashi06,
   author       = {Kobayashi, Naoki},
   publisher    = {Springer},
