Added bits on choice and some bits on recursion.

--- a/doc/main.bib
+++ b/doc/main.bib
@@ -1,372 +1,372 @@
 @inproceedings{padovaninovara15,
-  author    = {Padovani, Luca and Novara, Luca},
-  publisher = {Springer},
-  booktitle = {Proc.\ of {FORTE}},
-  year      = 2015,
-  pages     = {3--18},
-  series    = {LNCS},
-  title     = {{Types for Deadlock-Free Higher-Order Programs}},
-  volume    = 9039,
+  author       = {Padovani, Luca and Novara, Luca},
+  publisher    = {Springer},
+  booktitle    = {Proc.\ of {FORTE}},
+  year         = 2015,
+  pages        = {3--18},
+  series       = {LNCS},
+  title        = {{Types for Deadlock-Free Higher-Order Programs}},
+  volume       = 9039,
 }
 
 @article{orchardyoshida17,
-  title			= {Session types with linearity in Haskell},
-  author		= {Orchard, Dominic and Yoshida, Nobuko},
-  journal		= {Behavioural Types: from Theory to Tools},
-  pages			= {219},
-  year			= {2017},
-  publisher	= {River Publishers}
+  title        = {Session types with linearity in Haskell},
+  author       = {Orchard, Dominic and Yoshida, Nobuko},
+  journal      = {Behavioural Types: from Theory to Tools},
+  pages        = {219},
+  year         = {2017},
+  publisher    = {River Publishers}
 }
 
 @inproceedings{orchardyoshida16,
-  author    = {Dominic A. Orchard and
+  author       = {Dominic A. Orchard and
                Nobuko Yoshida},
-  title     = {Effects as sessions, sessions as effects},
-  booktitle = {Proc.\ of {POPL}},
-  pages     = {568--581},
-  publisher = {{ACM}},
-  year      = {2016},
-  doi       = {10.1145/2837614.2837634}
+  title        = {Effects as sessions, sessions as effects},
+  booktitle    = {Proc.\ of {POPL}},
+  pages        = {568--581},
+  publisher    = {{ACM}},
+  year         = {2016},
+  doi          = {10.1145/2837614.2837634}
  }
 
 @inproceedings{pucellatov08,
-  doi				= {10.1145/1411286.1411290},
-  url				= {https://doi.org/10.1145/1411286.1411290},
-  year			= {2008},
-  publisher	= {{ACM} },
-  author		= {Riccardo Pucella and Jesse A. Tov},
-  title			= {Haskell session types with (almost) no class},
-  booktitle	= {Proc.\ of Haskell}
+  doi          = {10.1145/1411286.1411290},
+  url          = {https://doi.org/10.1145/1411286.1411290},
+  year         = {2008},
+  publisher    = {{ACM} },
+  author       = {Riccardo Pucella and Jesse A. Tov},
+  title        = {Haskell session types with (almost) no class},
+  booktitle    = {Proc.\ of Haskell}
 }
 
 
 @inproceedings{lindleymorris16,
-  author    = {Sam Lindley and
+  author       = {Sam Lindley and
                J. Garrett Morris},
-  title     = {Embedding session types in Haskell},
-  booktitle = {Proc.\ of Haskell},
-  pages     = {133--145},
-  publisher = {{ACM}},
-  year      = {2016},
-  doi       = {10.1145/2976002.2976018}
+  title        = {Embedding session types in Haskell},
+  booktitle    = {Proc.\ of Haskell},
+  pages        = {133--145},
+  publisher    = {{ACM}},
+  year         = {2016},
+  doi          = {10.1145/2976002.2976018}
 }
 
 @unpublished{kokkedardha21,
-  author		= "Wen Kokke and Ornela Dardha",
-  title			= "Prioritise the Best Variation",
-  note			= "Manuscript submitted for publication",
+  author       = "Wen Kokke and Ornela Dardha",
+  title        = "Prioritise the Best Variation",
+  note         = "Manuscript submitted for publication",
 }
 
 @article{kokke19,
-   title		= {{Rusty Variation}: Deadlock-free Sessions with Failure in {Rust}},
-  author		= {Wen Kokke},
-  journal		= {{EPTCS}},
-  volume		= {304},
-  issn			= {2075-2180},
-  publisher	= {Open Publishing Association},
-  year			= {2019},
-  month			= sep,
-  pages			= {48–60},
-  url				= {https://wen.works/public/pubs/eptcs2019b.pdf},
-  doi				= {10.4204/eptcs.304.4},
-  note			= {Renamed to Sesh},
+   title       = {{Rusty Variation}: Deadlock-free Sessions with Failure in {Rust}},
+  author       = {Wen Kokke},
+  journal      = {{EPTCS}},
+  volume       = {304},
+  issn         = {2075-2180},
+  publisher    = {Open Publishing Association},
+  year         = {2019},
+  month        = sep,
+  pages        = {48–60},
+  url          = {https://wen.works/public/pubs/eptcs2019b.pdf},
+  doi          = {10.4204/eptcs.304.4},
+  note         = {Renamed to Sesh},
 }
 
 @inproceedings{peytonjonesgordon96,
-  author		= {Simon L. {Peyton Jones} and Andrew D. Gordon and Sigbj{\o}rn Finne},
-  title			= {Concurrent Haskell},
-  booktitle	= {Proc.\ of {POPL}},
-  pages     = {295--308},
-  publisher	= {{ACM}},
-  yea       = {1996},
-  doi       = {10.1145/237721.237794}
+  author       = {Simon L. {Peyton Jones} and Andrew D. Gordon and Sigbj{\o}rn Finne},
+  title        = {Concurrent Haskell},
+  booktitle    = {Proc.\ of {POPL}},
+  pages        = {295--308},
+  publisher    = {{ACM}},
+  yea          = {1996},
+  doi          = {10.1145/237721.237794}
 }
 
 
 @inproceedings{dardhagiachino12,
-  author		= {Dardha, Ornela and Giachino, Elena and Sangiorgi, Davide},
-  publisher	= {ACM},
-  booktitle	= {Proc.\ of {PPDP}},
-  publisher	= {ACM},
-  year			= 2012,
-  pages			= {139--150},
-  title			= {Session types revisited},
+  author       = {Dardha, Ornela and Giachino, Elena and Sangiorgi, Davide},
+  publisher    = {ACM},
+  booktitle    = {Proc.\ of {PPDP}},
+  publisher    = {ACM},
+  year         = 2012,
+  pages        = {139--150},
+  title        = {Session types revisited},
 }
 
 @article{bernardyboespflug18,
-  doi				= {10.1145/3158093},
-  year			= {2018},
-  publisher	= {ACM},
-  volume		= {2},
-  journal		= {Proc.\ of {POPL}},
-  pages			= {1--29},
-  author		= {Jean-Philippe Bernardy and Mathieu Boespflug and Ryan R. Newton and Simon Peyton Jones and Arnaud Spiwack},
-  title			= {Linear Haskell: practical linearity in a higher-order polymorphic language}
+  doi          = {10.1145/3158093},
+  year         = {2018},
+  publisher    = {ACM},
+  volume       = {2},
+  journal      = {Proc.\ of {POPL}},
+  pages        = {1--29},
+  author       = {Jean-Philippe Bernardy and Mathieu Boespflug and Ryan R. Newton and Simon Peyton Jones and Arnaud Spiwack},
+  title        = {Linear Haskell: practical linearity in a higher-order polymorphic language}
  }
 
 @article{fowlerlindley19,
-  author		= {Fowler, Simon and Lindley, Sam and Morris, J. Garrett and Decova, S\'{a}ra},
-  title			= {Exceptional Asynchronous Session Types: Session Types without Tiers},
-  year			= {2019},
-  publisher	= {ACM},
-  address		= {New York, NY, USA},
-  volume		= {3},
-  doi				= {10.1145/3290341},
-  journal		= {Proc.\ of POPL},
-  articleno	= {28},
-  numpages	= {29}
+  author       = {Fowler, Simon and Lindley, Sam and Morris, J. Garrett and Decova, S\'{a}ra},
+  title        = {Exceptional Asynchronous Session Types: Session Types without Tiers},
+  year         = {2019},
+  publisher    = {ACM},
+  address      = {New York, NY, USA},
+  volume       = {3},
+  doi          = {10.1145/3290341},
+  journal      = {Proc.\ of POPL},
+  articleno    = {28},
+  numpages     = {29}
  }
 
 @inproceedings{polakow15,
-  doi				= {10.1145/2804302.2804309},
-  url				= {https://doi.org/10.1145/2804302.2804309},
-  year			= {2015},
-  month			= aug,
-  publisher	= {{ACM}},
-  author		= {Jeff Polakow},
-  title			= {Embedding a full linear Lambda calculus in Haskell},
-  booktitle	= {Proc/ of the Symposium on Haskell}
+  doi          = {10.1145/2804302.2804309},
+  url          = {https://doi.org/10.1145/2804302.2804309},
+  year         = {2015},
+  month        = aug,
+  publisher    = {{ACM}},
+  author       = {Jeff Polakow},
+  title        = {Embedding a full linear Lambda calculus in Haskell},
+  booktitle    = {Proc/ of the Symposium on Haskell}
 }
 
 @inproceedings{neubauerthiemann04,
-  author    = {Matthias Neubauer and
+  author       = {Matthias Neubauer and
                Peter Thiemann},
-  title     = {An Implementation of Session Types},
-  booktitle = {Proc.\ of {PADL}},
-  series    = {Lecture Notes in Computer Science},
-  volume    = {3057},
-  pages     = {56--70},
-  publisher = {Springer},
-  year      = {2004},
-  doi       = {10.1007/978-3-540-24836-1\_5}
+  title        = {An Implementation of Session Types},
+  booktitle    = {Proc.\ of {PADL}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {3057},
+  pages        = {56--70},
+  publisher    = {Springer},
+  year         = {2004},
+  doi          = {10.1007/978-3-540-24836-1\_5}
 }
 
 @inproceedings{imaiyuen10,
-  author    = {Keigo Imai and
+  author       = {Keigo Imai and
                Shoji Yuen and
                Kiyoshi Agusa},
-  title     = {Session Type Inference in Haskell},
-  booktitle = {Proc.\  pf {PLACES}},
-  series    = {{EPTCS}},
-  volume    = {69},
-  pages     = {74--91},
-  year      = {2010},
-  doi       = {10.4204/EPTCS.69.6}
+  title        = {Session Type Inference in Haskell},
+  booktitle    = {Proc.\  pf {PLACES}},
+  series       = {{EPTCS}},
+  volume       = {69},
+  pages        = {74--91},
+  year         = {2010},
+  doi          = {10.4204/EPTCS.69.6}
 }
 
 @article{sackmaneisenbach08,
-  author    = {Sackman, Matthew and Eisenbach, Susan},
-  year      = {2008},
-  month     = {01},
-  pages     = {},
-  title     = {Session Types in Haskell Updating Message Passing for the 21st Century}
+  author       = {Sackman, Matthew and Eisenbach, Susan},
+  year         = {2008},
+  month        = {01},
+  pages        = {},
+  title        = {Session Types in Haskell Updating Message Passing for the 21st Century}
 }
 
 @inproceedings{JML15,
-  author    = {Thomas Bracht Laumann Jespersen and
+  author       = {Thomas Bracht Laumann Jespersen and
                Philip Munksgaard and
                Ken Friis Larsen},
-  title     = {Session types for {Rust}},
-  booktitle = {Proc.\ of WGP@ICFP},
+  title        = {Session types for {Rust}},
+  booktitle    = {Proc.\ of WGP@ICFP},
   optpages     = {13--22},
-  year      = {2015},
+  year         = {2015},
   optpublisher = {{ACM}},
   opturl       = {http://doi.acm.org/10.1145/2808098.2808100},
-  doi       = {10.1145/2808098.2808100},
-  timestamp = {Tue, 15 Dec 2015 18:36:34 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/icfp/JespersenML15},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  doi          = {10.1145/2808098.2808100},
+  timestamp    = {Tue, 15 Dec 2015 18:36:34 +0100},
+  biburl       = {http://dblp.uni-trier.de/rec/bib/conf/icfp/JespersenML15},
+  bibsource    = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{PadFuse,
-  title={A simple library implementation of binary sessions},
-  volume={27},
-  DOI={10.1017/S0956796816000289},
-  journal={Journal of Functional Programming},
-  publisher={Cambridge University Press},
-  author={Padovani, Luca},
-  year={2017},
-  note={Website: \url{http://www.di.unito.it/~padovani/Software/FuSe/FuSe.html}}
+  title        ={A simple library implementation of binary sessions},
+  volume       ={27},
+  DOI          ={10.1017/S0956796816000289},
+  journal      ={Journal of Functional Programming},
+  publisher    ={Cambridge University Press},
+  author       ={Padovani, Luca},
+  year         ={2017},
+  note         ={Website: \url{http://www.di.unito.it/~padovani/Software/FuSe/FuSe.html}}
   }
 
 @inproceedings{HY16,
-  author    = {Raymond Hu and
+  author       = {Raymond Hu and
                Nobuko Yoshida},
-  title     = {Hybrid Session Verification Through Endpoint {API} Generation},
-  booktitle = {Proc.\ of FASE},
+  title        = {Hybrid Session Verification Through Endpoint {API} Generation},
+  booktitle    = {Proc.\ of FASE},
   optpages     = {401--418},
   optseries    = {LNCS},
   optvolume    = {9633},
   optpublisher = {Springer},
-  year      = {2016},
+  year         = {2016},
   opturl       = {http://dx.doi.org/10.1007/978-3-662-49665-7_24},
-  doi       = {10.1007/978-3-662-49665-7_24},
-  timestamp = {Tue, 22 Mar 2016 15:57:02 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/fase/HuY16},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  doi          = {10.1007/978-3-662-49665-7_24},
+  timestamp    = {Tue, 22 Mar 2016 15:57:02 +0100},
+  biburl       = {http://dblp.uni-trier.de/rec/bib/conf/fase/HuY16},
+  bibsource    = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{ScalasY16,
-  author    = {Alceste Scalas and
+  author       = {Alceste Scalas and
                Nobuko Yoshida},
-  title     = {Lightweight Session Programming in Scala},
-  booktitle = {ECOOP},
+  title        = {Lightweight Session Programming in Scala},
+  booktitle    = {ECOOP},
   optpages     = {21:1--21:28},
-  year      = {2016},
+  year         = {2016},
   optseries    = {LIPIcs},
   optvolume    = {56},
   optpublisher = {Schloss Dagstuhl - Leibniz-Zentrum fuer Informatik},
   opturl       = {http://dx.doi.org/10.4230/LIPIcs.ECOOP.2016.21},
-  doi       = {10.4230/LIPIcs.ECOOP.2016.21},
-  timestamp = {Wed, 20 Jul 2016 15:20:05 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/ecoop/ScalasY16},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  doi          = {10.4230/LIPIcs.ECOOP.2016.21},
+  timestamp    = {Wed, 20 Jul 2016 15:20:05 +0200},
+  biburl       = {http://dblp.uni-trier.de/rec/bib/conf/ecoop/ScalasY16},
+  bibsource    = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{Scalas2017,
-  author    = {Alceste Scalas and
+  author       = {Alceste Scalas and
                Ornela Dardha and
                Raymond Hu and
                Nobuko Yoshida},
-  title     = {A Linear Decomposition of Multiparty Sessions for Safe Distributed
+  title        = {A Linear Decomposition of Multiparty Sessions for Safe Distributed
                Programming},
-  booktitle = {Proc.\ of {ECOOP}},
-  series    = {LIPIcs},
-  volume    = {74},
-  pages     = {24:1--24:31},
-  publisher = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
-  year      = {2017},
-  doi       = {10.4230/LIPIcs.ECOOP.2017.24},
-  timestamp = {Fri, 27 Mar 2020 08:51:54 +0100},
-  biburl    = {https://dblp.org/rec/conf/ecoop/ScalasDHY17.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  booktitle    = {Proc.\ of {ECOOP}},
+  series       = {LIPIcs},
+  volume       = {74},
+  pages        = {24:1--24:31},
+  publisher    = {Schloss Dagstuhl - Leibniz-Zentrum f{\"{u}}r Informatik},
+  year         = {2017},
+  doi          = {10.4230/LIPIcs.ECOOP.2017.24},
+  timestamp    = {Fri, 27 Mar 2020 08:51:54 +0100},
+  biburl       = {https://dblp.org/rec/conf/ecoop/ScalasDHY17.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{SivaramakrishnanNZE10,
-	Author = {K. C. Sivaramakrishnan and Karthik Nagaraj and Lukasz Ziarek and Patrick Eugster},
-	Booktitle = {Proc.\ of {COORDINATION}},
-	optPages = {152-167},
-	optSeries = {LNCS},
-	Title = {Efficient Session Type Guided Distributed Interaction},
-	Volume = {6116},
-	Year = {2010},
-        doi = {10.1007/978-3-642-13414-2_11}
+	Author       = {K. C. Sivaramakrishnan and Karthik Nagaraj and Lukasz Ziarek and Patrick Eugster},
+	Booktitle    = {Proc.\ of {COORDINATION}},
+	optPages     = {152-167},
+	optSeries    = {LNCS},
+	Title        = {Efficient Session Type Guided Distributed Interaction},
+	Volume       = {6116},
+	Year         = {2010},
+        doi    = {10.1007/978-3-642-13414-2_11}
 }
 
 @article{Brand1983CFM,
- author = {Brand, Daniel and Zafiropulo, Pitro},
- title = {On Communicating Finite-State Machines},
- journal = {J. ACM},
+ author        = {Brand, Daniel and Zafiropulo, Pitro},
+ title         = {On Communicating Finite-State Machines},
+ journal       = {J. ACM},
  optissue_date = {April 1983},
- volume = {30},
- number = {2},
- month = apr,
- year = {1983},
- ssn = {0004-5411},
-pages = {323--342},
- optnumpages = {20},
- opturl = {http://doi.acm.org/10.1145/322374.322380},
- doi = {10.1145/322374.322380},
- optacmid = {322380},
- publisher = {ACM},
- optaddress = {New York, NY, USA},
-} 
+ volume        = {30},
+ number        = {2},
+ month         = apr,
+ year          = {1983},
+ ssn           = {0004-5411},
+pages          = {323--342},
+ optnumpages   = {20},
+ opturl        = {http://doi.acm.org/10.1145/322374.322380},
+ doi           = {10.1145/322374.322380},
+ optacmid      = {322380},
+ publisher     = {ACM},
+ optaddress    = {New York, NY, USA},
+}
 
 @article{DHHNY2015,
-  author = "Romain Demangeon and Kohei Honda and Raymond Hu and Rumyana Neykova and Nobuko Yoshida",
-  title = {Practical Interruptible Conversations: Distributed Dynamic Verification with Multiparty Session Types and {Python}},
-  journal = "Formal Methods in System Design",
+  author       = "Romain Demangeon and Kohei Honda and Raymond Hu and Rumyana Neykova and Nobuko Yoshida",
+  title        = {Practical Interruptible Conversations: Distributed Dynamic Verification with Multiparty Session Types and {Python}},
+  journal      = "Formal Methods in System Design",
   optpublisher = "Springer",
-  optpages = "1--29",
-  year = "2015",
-  doi = "10.1007/s10703-014-0218-8"
+  optpages     = "1--29",
+  year         = "2015",
+  doi          = "10.1007/s10703-014-0218-8"
 }
 
 @inproceedings{Fowler16,
-  author    = {Simon Fowler},
-  title     = {An {E}rlang Implementation of Multiparty Session Actors},
-  booktitle = {{ICE}},
+  author       = {Simon Fowler},
+  title        = {An {E}rlang Implementation of Multiparty Session Actors},
+  booktitle    = {{ICE}},
   optpages     = {36--50},
-  year      = {2016},
+  year         = {2016},
   optseries    = {{EPTCS}},
   optvolume    = {223},
   opturl       = {http://dx.doi.org/10.4204/EPTCS.223.3},
-  doi       = {10.4204/EPTCS.223.3},
-  timestamp = {Tue, 04 Oct 2016 13:08:15 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/Fowler16},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  doi          = {10.4204/EPTCS.223.3},
+  timestamp    = {Tue, 04 Oct 2016 13:08:15 +0200},
+  biburl       = {http://dblp.uni-trier.de/rec/bib/journals/corr/Fowler16},
+  bibsource    = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{NY2017A,
-  TITLE = {{Multiparty Session Actors}},
-  AUTHOR = {Neykova, Rumyana and Yoshida, Nobuko},
-  optURL = {http://lmcs.episciences.org/3227},
-  DOI = {10.23638/LMCS-13(1:17)2017},
-  JOURNAL = {{Logical Methods in Computer Science}},
-  VOLUME = 13,
-  NUMBER = 1,
-  YEAR = {2017},
-  MONTH = Mar,
+  TITLE        = {{Multiparty Session Actors}},
+  AUTHOR       = {Neykova, Rumyana and Yoshida, Nobuko},
+  optURL       = {http://lmcs.episciences.org/3227},
+  DOI          = {10.23638/LMCS-13(1:17)2017},
+  JOURNAL      = {{Logical Methods in Computer Science}},
+  VOLUME       = 13,
+  NUMBER       = 1,
+  YEAR         = {2017},
+  MONTH        = Mar,
 }
 
 @inproceedings{NY2017,
-  author = {Rumyana Neykova and Nobuko Yoshida},
-  title = {{Let It Recover: Multiparty Protocol-Induced Recovery}},
-  booktitle = {CC},
+  author       = {Rumyana Neykova and Nobuko Yoshida},
+  title        = {{Let It Recover: Multiparty Protocol-Induced Recovery}},
+  booktitle    = {CC},
   optpublisher = {ACM},
-  year = 2017,
-  doi = "10.1145/3033019.3033031"
+  year         = 2017,
+  doi          = "10.1145/3033019.3033031"
 }
 
 @Article{NBY2017,
-author="Neykova, Rumyana
+author         ="Neykova, Rumyana
 and Bocchi, Laura
 and Yoshida, Nobuko",
-title="Timed Runtime Monitoring for Multiparty Conversations",
-journal="Formal Aspects of Computing",
-year="2017",
-optpages="1--34",
-optissn="1433-299X",
-doi="10.1007/s00165-017-0420-8",
-opturl="http://dx.doi.org/10.1007/s00165-017-0420-8"
+title          ="Timed Runtime Monitoring for Multiparty Conversations",
+journal        ="Formal Aspects of Computing",
+year           ="2017",
+optpages       ="1--34",
+optissn        ="1433-299X",
+doi            ="10.1007/s00165-017-0420-8",
+opturl         ="http://dx.doi.org/10.1007/s00165-017-0420-8"
 }
 
 @inproceedings{LMMNSVY2015,
-  author = "Hugo A. Lopez and Eduardo R. B. Marques and Francisco Martins and Nicholas Ng and Casar Santos and Vasco Thudichum Vasconcelos and Nobuko Yoshida",
-  title = "Protocol-Based Verification of Message-Passing Parallel Programs",
-  booktitle = "OOPSLA",
+  author       = "Hugo A. Lopez and Eduardo R. B. Marques and Francisco Martins and Nicholas Ng and Casar Santos and Vasco Thudichum Vasconcelos and Nobuko Yoshida",
+  title        = "Protocol-Based Verification of Message-Passing Parallel Programs",
+  booktitle    = "OOPSLA",
   optpublisher = "ACM",
-  optpages = {280-298},
-  year = "2015",
-  doi = "10.1145/2814270.2814302"
+  optpages     = {280-298},
+  year         = "2015",
+  doi          = "10.1145/2814270.2814302"
 }
 
 @inproceedings{KDPG16,
-  author    = {Dimitrios Kouzapas and
+  author       = {Dimitrios Kouzapas and
                Ornela Dardha and
                Roly Perera and
                Simon J. Gay},
-  title     = {Typechecking protocols with {Mungo} and {StMungo}},
-  booktitle = {PPDP},
-  pages     = {146--159},
-  year      = {2016},
+  title        = {Typechecking protocols with {Mungo} and {StMungo}},
+  booktitle    = {PPDP},
+  pages        = {146--159},
+  year         = {2016},
 }
 
 @inproceedings{CP10,
-  author    = {Lu\'{\i}s Caires and
+  author       = {Lu\'{\i}s Caires and
                Frank Pfenning},
-  title     = {Session Types as Intuitionistic Linear Propositions},
-  booktitle = {CONCUR},
-  series    = {LNCS},
-  volume    = {6269},
-  publisher = {Springer},
-  year      = {2010},
-  pages     = {222-236},
+  title        = {Session Types as Intuitionistic Linear Propositions},
+  booktitle    = {CONCUR},
+  series       = {LNCS},
+  volume       = {6269},
+  publisher    = {Springer},
+  year         = {2010},
+  pages        = {222-236},
   opturl       = {http://dx.doi.org/10.1007/978-3-642-15375-4_16},
-  doi       = {10.1007/978-3-642-15375-4_16},
-  timestamp = {Thu, 26 Aug 2010 16:46:17 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/concur/CairesP10},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  doi          = {10.1007/978-3-642-15375-4_16},
+  timestamp    = {Thu, 26 Aug 2010 16:46:17 +0200},
+  biburl       = {http://dblp.uni-trier.de/rec/bib/conf/concur/CairesP10},
+  bibsource    = {dblp computer science bibliography, http://dblp.org}
 }
 
 @article{girard87,
@@ -410,18 +410,18 @@ opturl="http://dx.doi.org/10.1007/s00165-017-0420-8"
 }
 
 @article{KPT99,
-  author    = {Naoki Kobayashi and
+  author       = {Naoki Kobayashi and
                Benjamin C. Pierce and
                David N. Turner},
-  title     = {Linearity and the pi-calculus},
-  journal   = {{ACM} Trans. Program. Lang. Syst.},
-  volume    = {21},
-  number    = {5},
-  pages     = {914--947},
-  year      = {1999},
-  doi       = {10.1145/330249.330251},
-  biburl    = {https://dblp.org/rec/journals/toplas/KobayashiPT99.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+  title        = {Linearity and the pi-calculus},
+  journal      = {{ACM} Trans. Program. Lang. Syst.},
+  volume       = {21},
+  number       = {5},
+  pages        = {914--947},
+  year         = {1999},
+  doi          = {10.1145/330249.330251},
+  biburl       = {https://dblp.org/rec/journals/toplas/KobayashiPT99.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{kobayashi06,
@@ -527,3 +527,20 @@ opturl="http://dx.doi.org/10.1007/s00165-017-0420-8"
   note         = {Extended version of \cite{gayvasconcelos10}},
 }
 
+
+@inproceedings{launchburypeytonjones94,
+  author       = {Launchbury, John and Peyton Jones, Simon L.},
+  title        = {Lazy Functional State Threads},
+  year         = {1994},
+  isbn         = {089791662X},
+  publisher    = {Association for Computing Machinery},
+  address      = {New York, NY, USA},
+  url          = {https://doi.org/10.1145/178243.178246},
+  doi          = {10.1145/178243.178246},
+  abstract     = {Some algorithms make critical internal use of updatable state, even though their external specification is purely functional. Based on earlier work on monads, we present a way of securely encapsulating stateful computations that manipulate multiple, named, mutable objects, in the context of a non-strict, purely-functional language.The security of the encapsulation is assured by the type system, using parametricity. Intriguingly, this parametricity requires the provision of a (single) constant with a rank-2 polymorphic type.},
+  booktitle    = {Proceedings of the ACM SIGPLAN 1994 Conference on Programming Language Design and Implementation},
+  pages        = {24–35},
+  numpages     = {12},
+  location     = {Orlando, Florida, USA},
+  series       = {PLDI '94}
+}
