--- a/doc/preamble/sesh.tex
+++ b/doc/preamble/sesh.tex
@@ -3,3 +3,5 @@
 \newcommand{\seshtysend}[1][]{\ty{\Conid{Send}}^{\cs{#1}}}
 \newcommand{\seshtyrecv}[1][]{\ty{\Conid{Recv}}^{\cs{#1}}}
 \newcommand{\seshtyend}[1][]{\ty{\Conid{End}}^{\cs{#1}}}
+\newcommand{\seshtysel}[1][]{\ty{\Conid{Select}}^{\cs{#1}}}
+\newcommand{\seshtyoff}[1][]{\ty{\Conid{Offer}}^{\cs{#1}}}
