--- a/doc/preamble/sesh.tex
+++ b/doc/preamble/sesh.tex
@@ -5,3 +5,5 @@
 \newcommand{\seshtyend}[1][]{\ty{\Conid{End}}^{\cs{#1}}}
 \newcommand{\seshtysel}[1][]{\ty{\Conid{Select}}^{\cs{#1}}}
 \newcommand{\seshtyoff}[1][]{\ty{\Conid{Offer}}^{\cs{#1}}}
+\newcommand{\seshtySR}[2]{\ty{\Conid{SR}}_{\cs{#1}}^{\cs{#2}}}
+\newcommand{\seshtyRS}[2]{\ty{\Conid{RS}}_{\cs{#1}}^{\cs{#2}}}
